tests/badly_positioned_unknown_use/badly_positioned_unknown_use.exp
Error --------------------------------------------------------------------------------------------------- test1.js:20:41

Cannot call `foo` because inexact object type [1] is incompatible with exact object type [2]. [incompatible-exact]

   test1.js:20:41
   20| var x = f<React.ComponentType<{}>, _>()(foo(Comp));
                                               ^^^

References:
   test1.js:20:31
   20| var x = f<React.ComponentType<{}>, _>()(foo(Comp));
                                     ^^ [1]
   test1.js:4:34
    4|   Component: React$ComponentType<{|...P|}>,
                                        ^^^^^^^^ [2]



Found 1 error
